Move static files into djangocms_leaflet sub folder, webpack bundle
.gitignore
npm update
rebuild webpack bundle

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "css-loader": "^6.8.1",
     "leaflet": "^1.9.4",
+    "overlapping-marker-spiderfier-leaflet": "^0.2.7",
     "style-loader": "^3.3.3"
   }
 }
