--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,24 +3,25 @@
 repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
     # Ruff version.
-    rev: v0.1.3
+    rev: v0.9.1
     hooks:
       - id: ruff
         args: [ --fix, --exit-non-zero-on-fix ]
+      - id: ruff-format
 
   - repo: https://github.com/pycqa/flake8
-    rev: '6.1.0'  # pick a git hash / tag to point to
+    rev: '7.1.1'  # pick a git hash / tag to point to
     hooks:
       - id: flake8
 
   - repo: https://github.com/adamchainz/django-upgrade
-    rev: "1.15.0"
+    rev: "1.22.2"
     hooks:
       - id: django-upgrade
         args: [ --target-version, "4.2" ]   # Django version
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.5.0
+    rev: v5.0.0
     hooks:
       - id: check-ast
       - id: check-json
@@ -30,17 +31,6 @@ repos:
       - id: check-merge-conflict
       - id: mixed-line-ending
       - id: check-symlinks
-
-  - repo: https://github.com/google/yapf
-    rev: 'v0.40.2'
-    hooks:
-      - id: yapf
-        name: yapf
-        description: "A formatter for Python files."
-        entry: yapf
-        args: [ -i ]  # inplace
-        language: python
-        types: [ python ]
 
   - repo: local
     hooks:
